--- a/analyse2/analyse.Rmd
+++ b/analyse2/analyse.Rmd
@@ -215,69 +215,182 @@ setnames(DTFormProcessInt, old=c("V1"), new=c("nb"))
 remove(DTFormProcessIntNbTmp);
 
 
-# Données sur les caractéristiques des deux parties
-DTFormSens <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
-DTFormSens$v <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][sens==0][nb>=2], DTFormProcessInt[FirstCondition=="mod"][sens==4][nb>=2]))
-DTFormSens$pv <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][sens==1][nb>=2], DTFormProcessInt[FirstCondition=="mod"][sens==3][nb>=2]))
-DTFormSens$n <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][sens==2][nb>=2], DTFormProcessInt[FirstCondition=="mod"][sens==2][nb>=2]))
-DTFormSens$pm <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][sens==3][nb>=2], DTFormProcessInt[FirstCondition=="mod"][sens==1][nb>=2]))
-DTFormSens$m <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][sens==4][nb>=2], DTFormProcessInt[FirstCondition=="mod"][sens==0][nb>=2]))
+# Reponses au questionnaire comparatif sur les caractéristiques des deux parties
+DTFormSensVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormSensVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][sens==0])
+DTFormSensVanillaFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][sens==1])
+DTFormSensVanillaFirst$n <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][sens==2])
+DTFormSensVanillaFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][sens==3])
+DTFormSensVanillaFirst$m <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][sens==4])
 
-DTFormSituations <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
-DTFormSituations$v <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][situations==0][nb>=2], DTFormProcessInt[FirstCondition=="mod"][situations==4][nb>=2]))
-DTFormSituations$pv <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][situations==1][nb>=2], DTFormProcessInt[FirstCondition=="mod"][situations==3][nb>=2]))
-DTFormSituations$n <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][situations==2][nb>=2], DTFormProcessInt[FirstCondition=="mod"][situations==2][nb>=2]))
-DTFormSituations$pm <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][situations==3][nb>=2], DTFormProcessInt[FirstCondition=="mod"][situations==1][nb>=2]))
-DTFormSituations$m <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][situations==4][nb>=2], DTFormProcessInt[FirstCondition=="mod"][situations==0][nb>=2]))
+DTFormSituationsVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormSituationsVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][situations==0])
+DTFormSituationsVanillaFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][situations==1])
+DTFormSituationsVanillaFirst$n <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][situations==2])
+DTFormSituationsVanillaFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][situations==3])
+DTFormSituationsVanillaFirst$m <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][situations==4])
 
-DTFormInteret <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
-DTFormInteret$v <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][interet==0][nb>=2], DTFormProcessInt[FirstCondition=="mod"][interet==4][nb>=2]))
-DTFormInteret$pv <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][interet==1][nb>=2], DTFormProcessInt[FirstCondition=="mod"][interet==3][nb>=2]))
-DTFormInteret$n <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][interet==2][nb>=2], DTFormProcessInt[FirstCondition=="mod"][interet==2][nb>=2]))
-DTFormInteret$pm <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][interet==3][nb>=2], DTFormProcessInt[FirstCondition=="mod"][interet==1][nb>=2]))
-DTFormInteret$m <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][interet==4][nb>=2], DTFormProcessInt[FirstCondition=="mod"][interet==0][nb>=2]))
+DTFormInteretVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormInteretVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][interet==0])
+DTFormInteretVanillaFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][interet==1])
+DTFormInteretVanillaFirst$n <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][interet==2])
+DTFormInteretVanillaFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][interet==3])
+DTFormInteretVanillaFirst$m <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][interet==4])
 
-DTFormLogique <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
-DTFormLogique$v <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][logique==0][nb>=2], DTFormProcessInt[FirstCondition=="mod"][logique==4][nb>=2]))
-DTFormLogique$pv <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][logique==1][nb>=2], DTFormProcessInt[FirstCondition=="mod"][logique==3][nb>=2]))
-DTFormLogique$n <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][logique==2][nb>=2], DTFormProcessInt[FirstCondition=="mod"][logique==2][nb>=2]))
-DTFormLogique$pm <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][logique==3][nb>=2], DTFormProcessInt[FirstCondition=="mod"][logique==1][nb>=2]))
-DTFormLogique$m <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][logique==4][nb>=2], DTFormProcessInt[FirstCondition=="mod"][logique==0][nb>=2]))
+DTFormLogiqueVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormLogiqueVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][logique==0])
+DTFormLogiqueVanillaFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][logique==1])
+DTFormLogiqueVanillaFirst$n <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][logique==2])
+DTFormLogiqueVanillaFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][logique==3])
+DTFormLogiqueVanillaFirst$m <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][logique==4])
 
-DTFormFaire <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
-DTFormFaire$v <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][faire==0][nb>=2], DTFormProcessInt[FirstCondition=="mod"][faire==4][nb>=2]))
-DTFormFaire$pv <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][faire==1][nb>=2], DTFormProcessInt[FirstCondition=="mod"][faire==3][nb>=2]))
-DTFormFaire$n <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][faire==2][nb>=2], DTFormProcessInt[FirstCondition=="mod"][faire==2][nb>=2]))
-DTFormFaire$pm <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][faire==3][nb>=2], DTFormProcessInt[FirstCondition=="mod"][faire==1][nb>=2]))
-DTFormFaire$m <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][faire==4][nb>=2], DTFormProcessInt[FirstCondition=="mod"][faire==0][nb>=2]))
+DTFormFaireVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormFaireVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][faire==0])
+DTFormFaireVanillaFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][faire==1])
+DTFormFaireVanillaFirst$n <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][faire==2])
+DTFormFaireVanillaFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][faire==3])
+DTFormFaireVanillaFirst$m <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][faire==4])
 
-DTFormObjectifs <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
-DTFormObjectifs$v <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==0][nb>=2], DTFormProcessInt[FirstCondition=="mod"][objectifs==4][nb>=2]))
-DTFormObjectifs$pv <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==1][nb>=2], DTFormProcessInt[FirstCondition=="mod"][objectifs==3][nb>=2]))
-DTFormObjectifs$n <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==2][nb>=2], DTFormProcessInt[FirstCondition=="mod"][objectifs==2][nb>=2]))
-DTFormObjectifs$pm <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==3][nb>=2], DTFormProcessInt[FirstCondition=="mod"][objectifs==1][nb>=2]))
-DTFormObjectifs$m <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==4][nb>=2], DTFormProcessInt[FirstCondition=="mod"][objectifs==0][nb>=2]))
+DTFormObjectifsVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormObjectifsVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==0])
+DTFormObjectifsVanillaFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==1])
+DTFormObjectifsVanillaFirst$n <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==2])
+DTFormObjectifsVanillaFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==3])
+DTFormObjectifsVanillaFirst$m <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][objectifs==4])
 
-DTFormManques <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
-DTFormManques$v <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][manques==0][nb>=2], DTFormProcessInt[FirstCondition=="mod"][manques==4][nb>=2]))
-DTFormManques$pv <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][manques==1][nb>=2], DTFormProcessInt[FirstCondition=="mod"][manques==3][nb>=2]))
-DTFormManques$n <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][manques==2][nb>=2], DTFormProcessInt[FirstCondition=="mod"][manques==2][nb>=2]))
-DTFormManques$pm <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][manques==3][nb>=2], DTFormProcessInt[FirstCondition=="mod"][manques==1][nb>=2]))
-DTFormManques$m <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][manques==4][nb>=2], DTFormProcessInt[FirstCondition=="mod"][manques==0][nb>=2]))
+DTFormManquesVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormManquesVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][manques==0])
+DTFormManquesVanillaFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][manques==1])
+DTFormManquesVanillaFirst$n <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][manques==2])
+DTFormManquesVanillaFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][manques==3])
+DTFormManquesVanillaFirst$m <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][manques==4])
 
-DTFormSurpris <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
-DTFormSurpris$v <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][surpris==0][nb>=2], DTFormProcessInt[FirstCondition=="mod"][surpris==4][nb>=2]))
-DTFormSurpris$pv <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][surpris==1][nb>=2], DTFormProcessInt[FirstCondition=="mod"][surpris==3][nb>=2]))
-DTFormSurpris$n <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][surpris==2][nb>=2], DTFormProcessInt[FirstCondition=="mod"][surpris==2][nb>=2]))
-DTFormSurpris$pm <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][surpris==3][nb>=2], DTFormProcessInt[FirstCondition=="mod"][surpris==1][nb>=2]))
-DTFormSurpris$m <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][surpris==4][nb>=2], DTFormProcessInt[FirstCondition=="mod"][surpris==0][nb>=2]))
+DTFormSurprisVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormSurprisVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][surpris==0])
+DTFormSurprisVanillaFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][surpris==1])
+DTFormSurprisVanillaFirst$n <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][surpris==2])
+DTFormSurprisVanillaFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][surpris==3])
+DTFormSurprisVanillaFirst$m <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][surpris==4])
 
-DTFormPlaisir <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
-DTFormPlaisir$v <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==0][nb>=2], DTFormProcessInt[FirstCondition=="mod"][plaisir==4][nb>=2]))
-DTFormPlaisir$pv <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==1][nb>=2], DTFormProcessInt[FirstCondition=="mod"][plaisir==3][nb>=2]))
-DTFormPlaisir$n <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==2][nb>=2], DTFormProcessInt[FirstCondition=="mod"][plaisir==2][nb>=2]))
-DTFormPlaisir$pm <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==3][nb>=2], DTFormProcessInt[FirstCondition=="mod"][plaisir==1][nb>=2]))
-DTFormPlaisir$m <- nrow(rbind(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==4][nb>=2], DTFormProcessInt[FirstCondition=="mod"][plaisir==0][nb>=2]))
+DTFormPlaisirVanillaFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormPlaisirVanillaFirst$v <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==0])
+DTFormPlaisirVanillaFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==1])
+DTFormPlaisirVanillaFirst$n <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==2])
+DTFormPlaisirVanillaFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==3])
+DTFormPlaisirVanillaFirst$m <- nrow(DTFormProcessInt[FirstCondition=="vanilla"][plaisir==4])
+
+DTFormSensModFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormSensModFirst$v <- nrow(DTFormProcessInt[FirstCondition=="mod"][sens==4])
+DTFormSensModFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="mod"][sens==3])
+DTFormSensModFirst$n <- nrow(DTFormProcessInt[FirstCondition=="mod"][sens==2])
+DTFormSensModFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="mod"][sens==1])
+DTFormSensModFirst$m <- nrow(DTFormProcessInt[FirstCondition=="mod"][sens==0])
+
+DTFormSituationsModFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormSituationsModFirst$v <- nrow(DTFormProcessInt[FirstCondition=="mod"][situations==4])
+DTFormSituationsModFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="mod"][situations==3])
+DTFormSituationsModFirst$n <- nrow(DTFormProcessInt[FirstCondition=="mod"][situations==2])
+DTFormSituationsModFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="mod"][situations==1])
+DTFormSituationsModFirst$m <- nrow(DTFormProcessInt[FirstCondition=="mod"][situations==0])
+
+DTFormInteretModFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormInteretModFirst$v <- nrow(DTFormProcessInt[FirstCondition=="mod"][interet==4])
+DTFormInteretModFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="mod"][interet==3])
+DTFormInteretModFirst$n <- nrow(DTFormProcessInt[FirstCondition=="mod"][interet==2])
+DTFormInteretModFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="mod"][interet==1])
+DTFormInteretModFirst$m <- nrow(DTFormProcessInt[FirstCondition=="mod"][interet==0])
+
+DTFormLogiqueModFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormLogiqueModFirst$v <- nrow(DTFormProcessInt[FirstCondition=="mod"][logique==4])
+DTFormLogiqueModFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="mod"][logique==3])
+DTFormLogiqueModFirst$n <- nrow(DTFormProcessInt[FirstCondition=="mod"][logique==2])
+DTFormLogiqueModFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="mod"][logique==1])
+DTFormLogiqueModFirst$m <- nrow(DTFormProcessInt[FirstCondition=="mod"][logique==0])
+
+DTFormFaireModFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormFaireModFirst$v <- nrow(DTFormProcessInt[FirstCondition=="mod"][faire==4])
+DTFormFaireModFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="mod"][faire==3])
+DTFormFaireModFirst$n <- nrow(DTFormProcessInt[FirstCondition=="mod"][faire==2])
+DTFormFaireModFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="mod"][faire==1])
+DTFormFaireModFirst$m <- nrow(DTFormProcessInt[FirstCondition=="mod"][faire==0])
+
+DTFormObjectifsModFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormObjectifsModFirst$v <- nrow(DTFormProcessInt[FirstCondition=="mod"][objectifs==4])
+DTFormObjectifsModFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="mod"][objectifs==3])
+DTFormObjectifsModFirst$n <- nrow(DTFormProcessInt[FirstCondition=="mod"][objectifs==2])
+DTFormObjectifsModFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="mod"][objectifs==1])
+DTFormObjectifsModFirst$m <- nrow(DTFormProcessInt[FirstCondition=="mod"][objectifs==0])
+
+DTFormManquesModFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormManquesModFirst$v <- nrow(DTFormProcessInt[FirstCondition=="mod"][manques==4])
+DTFormManquesModFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="mod"][manques==3])
+DTFormManquesModFirst$n <- nrow(DTFormProcessInt[FirstCondition=="mod"][manques==2])
+DTFormManquesModFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="mod"][manques==1])
+DTFormManquesModFirst$m <- nrow(DTFormProcessInt[FirstCondition=="mod"][manques==0])
+
+DTFormSurprisModFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormSurprisModFirst$v <- nrow(DTFormProcessInt[FirstCondition=="mod"][surpris==4])
+DTFormSurprisModFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="mod"][surpris==3])
+DTFormSurprisModFirst$n <- nrow(DTFormProcessInt[FirstCondition=="mod"][surpris==2])
+DTFormSurprisModFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="mod"][surpris==1])
+DTFormSurprisModFirst$m <- nrow(DTFormProcessInt[FirstCondition=="mod"][surpris==0])
+
+DTFormPlaisirModFirst <- data.table(v = "vanilla", pv="plutot vanilla", n="ni l'une ni l'autre", pm="plutot mod", m="mod")
+DTFormPlaisirModFirst$v <- nrow(DTFormProcessInt[FirstCondition=="mod"][plaisir==4])
+DTFormPlaisirModFirst$pv <- nrow(DTFormProcessInt[FirstCondition=="mod"][plaisir==3])
+DTFormPlaisirModFirst$n <- nrow(DTFormProcessInt[FirstCondition=="mod"][plaisir==2])
+DTFormPlaisirModFirst$pm <- nrow(DTFormProcessInt[FirstCondition=="mod"][plaisir==1])
+DTFormPlaisirModFirst$m <- nrow(DTFormProcessInt[FirstCondition=="mod"][plaisir==0])
+
+DTFormSens <- rbind(DTFormSensVanillaFirst, DTFormSensModFirst)
+DTFormSituations <- rbind(DTFormSituationsVanillaFirst, DTFormSituationsModFirst)
+DTFormInteret <- rbind(DTFormInteretVanillaFirst, DTFormInteretModFirst)
+DTFormLogique <- rbind(DTFormLogiqueVanillaFirst, DTFormLogiqueModFirst)
+DTFormFaire <- rbind(DTFormFaireVanillaFirst, DTFormFaireModFirst)
+DTFormObjectifs <- rbind(DTFormObjectifsVanillaFirst, DTFormObjectifsModFirst)
+DTFormManques <- rbind(DTFormManquesVanillaFirst, DTFormManquesModFirst)
+DTFormSurpris <- rbind(DTFormSurprisVanillaFirst, DTFormSurprisModFirst)
+DTFormPlaisir <- rbind(DTFormPlaisirVanillaFirst, DTFormPlaisirModFirst)
+
+# Distribution de l'ordre des parties
+barplot(table(DTFormProcessInt$FirstCondition), xlab="Première partie", ylab="Nombre de personnes", main="Ordre des parties",las=2)
+
+barplot(data.table(rbind(DTFormSens$v, DTFormSens$pv, DTFormSens$n, DTFormSens$pm, DTFormSens$m))$V1, main="Sens pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSens$v, DTFormSens$pv, DTFormSens$n, DTFormSens$pm, DTFormSens$m))$V2, main="Sens pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSens[1]$v + DTFormSens[2]$v, DTFormSens[1]$pv + DTFormSens[2]$pv, DTFormSens[1]$n + DTFormSens[2]$n, DTFormSens[1]$pm + DTFormSens[2]$pm, DTFormSens[1]$m + DTFormSens[2]$m))$V1, main="Sens total", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+
+barplot(data.table(rbind(DTFormSituations$v, DTFormSituations$pv, DTFormSituations$n, DTFormSituations$pm, DTFormSituations$m))$V1, main="Situations pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSituations$v, DTFormSituations$pv, DTFormSituations$n, DTFormSituations$pm, DTFormSituations$m))$V2, main="Situations pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSituations[1]$v + DTFormSituations[2]$v, DTFormSituations[1]$pv + DTFormSituations[2]$pv, DTFormSituations[1]$n + DTFormSituations[2]$n, DTFormSituations[1]$pm + DTFormSituations[2]$pm, DTFormSituations[1]$m + DTFormSituations[2]$m))$V1, main="Situations total", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+
+barplot(data.table(rbind(DTFormInteret$v, DTFormInteret$pv, DTFormInteret$n, DTFormInteret$pm, DTFormInteret$m))$V1, main="Interet pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormInteret$v, DTFormInteret$pv, DTFormInteret$n, DTFormInteret$pm, DTFormInteret$m))$V2, main="Interet pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormInteret[1]$v + DTFormInteret[2]$v, DTFormInteret[1]$pv + DTFormInteret[2]$pv, DTFormInteret[1]$n + DTFormInteret[2]$n, DTFormInteret[1]$pm + DTFormInteret[2]$pm, DTFormInteret[1]$m + DTFormInteret[2]$m))$V1, main="Interet total", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+
+barplot(data.table(rbind(DTFormLogique$v, DTFormLogique$pv, DTFormLogique$n, DTFormLogique$pm, DTFormLogique$m))$V1, main="Logique pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormLogique$v, DTFormLogique$pv, DTFormLogique$n, DTFormLogique$pm, DTFormLogique$m))$V2, main="Logique pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormLogique[1]$v + DTFormLogique[2]$v, DTFormLogique[1]$pv + DTFormLogique[2]$pv, DTFormLogique[1]$n + DTFormLogique[2]$n, DTFormLogique[1]$pm + DTFormLogique[2]$pm, DTFormLogique[1]$m + DTFormLogique[2]$m))$V1, main="Logique total", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+
+barplot(data.table(rbind(DTFormFaire$v, DTFormFaire$pv, DTFormFaire$n, DTFormFaire$pm, DTFormFaire$m))$V1, main="Faire pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormFaire$v, DTFormFaire$pv, DTFormFaire$n, DTFormFaire$pm, DTFormFaire$m))$V2, main="Faire pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormFaire[1]$v + DTFormFaire[2]$v, DTFormFaire[1]$pv + DTFormFaire[2]$pv, DTFormFaire[1]$n + DTFormFaire[2]$n, DTFormFaire[1]$pm + DTFormFaire[2]$pm, DTFormFaire[1]$m + DTFormFaire[2]$m))$V1, main="Faire total", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+
+barplot(data.table(rbind(DTFormObjectifs$v, DTFormObjectifs$pv, DTFormObjectifs$n, DTFormObjectifs$pm, DTFormObjectifs$m))$V1, main="Objectifs pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormObjectifs$v, DTFormObjectifs$pv, DTFormObjectifs$n, DTFormObjectifs$pm, DTFormObjectifs$m))$V2, main="Objectifs pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormObjectifs[1]$v + DTFormObjectifs[2]$v, DTFormObjectifs[1]$pv + DTFormObjectifs[2]$pv, DTFormObjectifs[1]$n + DTFormObjectifs[2]$n, DTFormObjectifs[1]$pm + DTFormFaire[2]$pm, DTFormObjectifs[1]$m + DTFormObjectifs[2]$m))$V1, main="Objectifs total", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+
+barplot(data.table(rbind(DTFormManques$v, DTFormManques$pv, DTFormManques$n, DTFormManques$pm, DTFormManques$m))$V1, main="Manques pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormManques$v, DTFormManques$pv, DTFormManques$n, DTFormManques$pm, DTFormManques$m))$V2, main="Manques pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormManques[1]$v + DTFormManques[2]$v, DTFormManques[1]$pv + DTFormManques[2]$pv, DTFormManques[1]$n + DTFormManques[2]$n, DTFormManques[1]$pm + DTFormManques[2]$pm, DTFormManques[1]$m + DTFormManques[2]$m))$V1, main="Manques total", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+
+barplot(data.table(rbind(DTFormSurpris$v, DTFormSurpris$pv, DTFormSurpris$n, DTFormSurpris$pm, DTFormSurpris$m))$V1, main="Surpris pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSurpris$v, DTFormSurpris$pv, DTFormSurpris$n, DTFormSurpris$pm, DTFormSurpris$m))$V2, main="Surpris pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormSurpris[1]$v + DTFormSurpris[2]$v, DTFormSurpris[1]$pv + DTFormSurpris[2]$pv, DTFormSurpris[1]$n + DTFormSurpris[2]$n, DTFormSurpris[1]$pm + DTFormSurpris[2]$pm, DTFormSurpris[1]$m + DTFormSurpris[2]$m))$V1, main="Surpris total", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+
+barplot(data.table(rbind(DTFormPlaisir$v, DTFormPlaisir$pv, DTFormPlaisir$n, DTFormPlaisir$pm, DTFormPlaisir$m))$V1, main="Plaisir pour première partie vanilla", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormPlaisir$v, DTFormPlaisir$pv, DTFormPlaisir$n, DTFormPlaisir$pm, DTFormPlaisir$m))$V2, main="Plaisir pour première partie mod", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+barplot(data.table(rbind(DTFormPlaisir[1]$v + DTFormPlaisir[2]$v, DTFormPlaisir[1]$pv + DTFormPlaisir[2]$pv, DTFormPlaisir[1]$n + DTFormPlaisir[2]$n, DTFormPlaisir[1]$pm + DTFormPlaisir[2]$pm, DTFormPlaisir[1]$m + DTFormPlaisir[2]$m))$V1, main="Plaisir total", xlab="Echelle (vanilla à mod)", ylab="Nombre de personnes")
+
 
 # transformer dtform de façon a avoir pour le q characteristic 1 = v, 2 = pv, 3 = n, 4 = pm etc.
 
@@ -317,9 +430,7 @@ res$manques <- echoPValue(t.test(DTForm$manques ~ DTForm$FirstCondition, var.equ
 res$logique <- echoPValue(t.test(DTForm$logique ~ DTForm$FirstCondition, var.equal=TRUE)$p.value)
 
 
-hist(DTFormProcessInt$nb, main="utilisation des processus", xlab="Processus")
-
-barplot(DTFormPlaisir$v, main="Plaisir de jeu par partie", xlab="Partie")
+hist(DTFormProcessInt$nb, main="Utilisation des processus", xlab="Processus")
 
 montest <- function(table){
   DTTest <- data.table(nombre=t(table[1]))
@@ -486,7 +597,9 @@ summary(fit)
 ```
 
 ###Idees fit :
-- à trouver
+- checker leffet de l'ordre en prenant les réponses des cas firstcondition == vanilla et inversement
+- checker le nombre typés des interactions (kill, dig, build, etc.) -> chi2 sur col (type int) et ligne (type partie)
+- checker comment tester les likert scales
 
 ###Idees descriptif:
 - quantite d'interaction avec les process
