--- a/analyse2/analyse.Rmd
+++ b/analyse2/analyse.Rmd
@@ -144,17 +144,27 @@ for(d in dirs){
         DTFormLoc$LongueurSeconde <- nchar(as.character(DTFormLoc$seconde))
         
         DTFormLieuxLoc <- data.table(nbCharLieu1 = "nbCharLieu1", nbCharLieu2 = "nbCharLieu2", nbCharLieu3 = "nbCharLieu3", nbCharLieu4 = "nbCharLieu4", nbCharLieu5 = "nbCharLieu5", nbCharLieu6 = "nbCharLieu6", nbCharLieu7 = "nbCharLieu7", nbCharLieu8 = "nbCharLieu8", nbCharLieu9 = "nbCharLieu9", nbCharLieu10 = "nbCharLieu10")
-        DTFormLieuxLoc$nbCharLieu1 <- nchar(as.character(DTFormLoc$lieu1_couleur))
-        DTFormLieuxLoc$nbCharLieu2 <- nchar(as.character(DTFormLoc$lieu2_couleur))
-        DTFormLieuxLoc$nbCharLieu3 <- nchar(as.character(DTFormLoc$lieu3_couleur))
-        DTFormLieuxLoc$nbCharLieu4 <- nchar(as.character(DTFormLoc$lieu4_couleur))
-        DTFormLieuxLoc$nbCharLieu5 <- nchar(as.character(DTFormLoc$lieu5_couleur))
-        DTFormLieuxLoc$nbCharLieu6 <- nchar(as.character(DTFormLoc$lieu6_couleur))
-        DTFormLieuxLoc$nbCharLieu7 <- nchar(as.character(DTFormLoc$lieu7_couleur))
-        DTFormLieuxLoc$nbCharLieu8 <- nchar(as.character(DTFormLoc$lieu8_couleur))
-        DTFormLieuxLoc$nbCharLieu9 <- nchar(as.character(DTFormLoc$lieu9_couleur))
-        DTFormLieuxLoc$nbCharLieu10 <- nchar(as.character(DTFormLoc$lieu10_couleur))
-        DTFormLoc$nbLieux <- (if (DTFormLieuxLoc$nbCharLieu1 > 2) 1 else 0) + (if (DTFormLieuxLoc$nbCharLieu2 > 2) 1 else 0) + (if (DTFormLieuxLoc$nbCharLieu3 > 2) 1 else 0) + (if (DTFormLieuxLoc$nbCharLieu4 > 2) 1 else 0) + (if (DTFormLieuxLoc$nbCharLieu5 > 2) 1 else 0) + (if (DTFormLieuxLoc$nbCharLieu6 > 2) 1 else 0) +(if (DTFormLieuxLoc$nbCharLieu7 > 2) 1 else 0) + (if (DTFormLieuxLoc$nbCharLieu8 > 2) 1 else 0) + (if (DTFormLieuxLoc$nbCharLieu9 > 2) 1 else 0) + (if (DTFormLieuxLoc$nbCharLieu10 > 2) 1 else 0)
+        DTFormLieuxLoc$nbCharLieu1 <- nchar(as.character(DTFormLoc$lieu1_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLieuxLoc$nbCharLieu2 <- nchar(as.character(DTFormLoc$lieu2_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLieuxLoc$nbCharLieu3 <- nchar(as.character(DTFormLoc$lieu3_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLieuxLoc$nbCharLieu4 <- nchar(as.character(DTFormLoc$lieu4_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLieuxLoc$nbCharLieu5 <- nchar(as.character(DTFormLoc$lieu5_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLieuxLoc$nbCharLieu6 <- nchar(as.character(DTFormLoc$lieu6_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLieuxLoc$nbCharLieu7 <- nchar(as.character(DTFormLoc$lieu7_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLieuxLoc$nbCharLieu8 <- nchar(as.character(DTFormLoc$lieu8_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLieuxLoc$nbCharLieu9 <- nchar(as.character(DTFormLoc$lieu9_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLieuxLoc$nbCharLieu10 <- nchar(as.character(DTFormLoc$lieu10_couleur),allowNA = FALSE,keepNA = FALSE)
+        DTFormLoc$nbLieux <- 
+          (if (DTFormLieuxLoc$nbCharLieu1 > 2) 1 else 0) + 
+          (if (DTFormLieuxLoc$nbCharLieu2 > 2) 1 else 0) + 
+          (if (DTFormLieuxLoc$nbCharLieu3 > 2) 1 else 0) + 
+          (if (DTFormLieuxLoc$nbCharLieu4 > 2) 1 else 0) + 
+          (if (DTFormLieuxLoc$nbCharLieu5 > 2) 1 else 0) + 
+          (if (DTFormLieuxLoc$nbCharLieu6 > 2) 1 else 0) +
+          (if (DTFormLieuxLoc$nbCharLieu7 > 2) 1 else 0) + 
+          (if (DTFormLieuxLoc$nbCharLieu8 > 2) 1 else 0) + 
+          (if (DTFormLieuxLoc$nbCharLieu9 > 2) 1 else 0) + 
+          (if (DTFormLieuxLoc$nbCharLieu10 > 2) 1 else 0)
         DTForm <- rbind(DTForm,DTFormLoc);
         remove(DTFormLieuxLoc)
       }else{
@@ -377,6 +387,52 @@ DTFormObjectifs <- rbind(DTFormObjectifsVanillaFirst, DTFormObjectifsModFirst)
 DTFormManques <- rbind(DTFormManquesVanillaFirst, DTFormManquesModFirst)
 DTFormSurpris <- rbind(DTFormSurprisVanillaFirst, DTFormSurprisModFirst)
 DTFormPlaisir <- rbind(DTFormPlaisirVanillaFirst, DTFormPlaisirModFirst)
+
+barplot(table(DTFormProcessInt$sens + 1))
+
+
+
+#chi2 independance pour voir que pas repondu au hasard
+DT <- c(DTFormSens$v[1]+DTFormSens$v[2], 
+             DTFormSens$pv[1]+DTFormSens$pv[2], 
+             DTFormSens$n[1]+DTFormSens$n[2],
+             DTFormSens$pm[1]+DTFormSens$pm[2], 
+             DTFormSens$m[1]+DTFormSens$m[2])
+chisq.test(DT)
+
+#Wilcoxon signed rank pour voir voir que répondu sensiblement pas milieu 3
+DT <- DTFormProcessInt;
+DT$sens = DT$sens +1
+DT[FirstCondition=="mod"]$sens = 6-DT[FirstCondition=="mod"]$sens;
+barplot(table(DT$sens))
+wilcox.test(DT$sens,mu=3, alternative = "less")
+
+#Effet d'ordre
+wilcox.test(x=DT[FirstCondition=="mod"]$sens,y=DT[FirstCondition!="mod"]$sens,mu=0, alternative="greater")
+
+DT <- DTFormProcessInt;
+DT$situations = DT$situations +1
+DT[FirstCondition=="mod"]$situations = 6-DT[FirstCondition=="mod"]$situations;
+barplot(table(DT$situations))
+wilcox.test(DT$situations,mu=3, alternative = "greater")
+
+DT <- DTFormProcessInt;
+DT$logique = DT$logique +1
+DT[FirstCondition=="mod"]$logique = 6-DT[FirstCondition=="mod"]$logique;
+table(DT$logique)
+wilcox.test(DT$logique,mu=3, alternative = "greater")
+
+DT <- DTFormProcessInt;
+DT$faire = DT$faire +1
+DT[FirstCondition=="mod"]$faire = 6-DT[FirstCondition=="mod"]$faire;
+table(DT$faire)
+wilcox.test(DT$faire,mu=3)
+
+DT <- DTFormProcessInt;
+DT$objectifs = DT$faire +1
+DT[FirstCondition=="mod"]$faire = 6-DT[FirstCondition=="mod"]$faire;
+table(DT$faire)
+wilcox.test(DT$faire,mu=3)
 
 # Distribution des caracteristiques de jeu
 barplot(rowSums(data.table(rbind(DTFormSens$v, DTFormSens$pv, DTFormSens$n, DTFormSens$pm, DTFormSens$m))), main="Quelle partie vous a semblé avoir le plus de sens ?", xlab="Vanilla, plutot vanilla, ni l'une ni l'autre, plutôt mod, mod", ylab="Nombre de personnes")
